operation/ingress/tls-example/http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    kubernetes.io/ingress.class: "test1"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # http-->https
#    nginx.ingress.kubernetes.io/affinity: cookie
#    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
#    nginx.ingress.kubernetes.io/session-cookie-name: route
#    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
#    nginx.ingress.kubernetes.io/auth-tls-secret: "sockjs-tls-secret"
spec:
  tls:
    - hosts:
        - sockjs.xisheng.vip
        - tomcat.xisheng.vip
      secretName: sockjs-tls-secret
    - hosts:
        - sockjs.xisheng.vip
        - tomcat.xisheng.vip
      secretName: sockjs-tls-secret
  rules:
    - host:
      http:
        paths:
          - path: /
            backend:
              serviceName: tomcat
              servicePort: 8080
          - path: /echo
            backend:
              serviceName: sockjs
              servicePort: 8080
    - host: sockjs.xisheng.vip
      http:
        paths:
          - path: /
            backend:
              serviceName: sockjs
              servicePort: 8080
    - host: tomcat.xisheng.vip
      http:
        paths:
          - path: /
            backend:
              serviceName: tomcat
              servicePort: 8080
